# maximus

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in  maximus.schemas
debian/: changelog  control  copyright  manpages  maximus.1  maximus.install  rules  source_maximus.py  watch
debian/patches/: debian-changes-0.4.14-1jolicloud2  no_max_on_large_screens.patch  series
src/: Makefile.am  Makefile.in  main.c  maximus-app.c  maximus-app.h  maximus-bind.c  xutils.c
